# astra-intelligence

./: .dockerignore  Dockerfile  LaunchDashboard.command  LaunchDashboard.command.save  LaunchDashboard.command.txt  README.md  ai_trading_memory.db  app.py  astra_agent_states.json  astra_learning.json  astra_memory.json  astra_phase_checkpoint.json  astra_session_anchor.txt  astra_start.sh  astra_trade_log.csv  astra_tree.txt  boot_check_tree.txt  check_env.py  daily_forecast.txt  docker-compose.yml  final_astra_tree.txt  final_astra_tree_v2.txt  guardian_audit.json  guardian_import_audit.json  last_train_stamp.txt  last_verified_files.json  launch.py  launch.py.save  project_tree.txt  pyproject.toml  reset_environment.py  restore_astra_session.py  run_astra.py  sentinel_report.json  test_guardian_v4.py  top_signals.csv  verify_astra.py
astra_backup_cache/modules_backup_20251125_145340/: astra_memory.py
astra_cache/: AAL.parquet  AAPL.parquet  ABBV.parquet  ABT.parquet  ADAUSD.parquet  ADBE.parquet  AMAT.parquet  AMD.parquet  AMZN.parquet  ARM.parquet  ASML.parquet  AVAXUSD.parquet  AVGO.parquet  AXP.parquet  BA.parquet  BABA.parquet  BAC.parquet  BLK.parquet  BMY.parquet  BP.parquet  BTCUSD.parquet  C.parquet  CAT.parquet  CI.parquet  COIN.parquet  COP.parquet  COST.parquet  CRM.parquet  CRWD.parquet  CSCO.parquet  CVX.parquet  DAL.parquet  DE.parquet  DIS.parquet  DOGEUSD.parquet  ELV.parquet  EOG.parquet  ETHUSD.parquet  ETN.parquet  F.parquet  (+73 more)
astra_models/: neural_agent.pt
astra_modules/agents/: continual_trainer.py
docs/: astra_repo_map.json
(+115 files in other folders)
