[project]
name = "astra-intelligence"
version = "0.1.0"
description = ""
authors = [
    {name = "eballhaus",email = "ebsm25@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"

dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "plotly (>=6.5.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

